# ldk-node

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Package.swift  bindgen.sh  jitpack.yml
.github/workflows/: audit.yml  benchmarks.yml  claude-code-review.yml  claude.yml  cln-integration.yml  cron-weekly-rustfmt.yml  kotlin.yml  lnd-integration.yml  publish-android.yml  publish-jvm.yml  python.yml  rust.yml  semver.yml  swift.yml  vss-integration.yml
benches/: payments.rs
bindings/: README.md  ldk_node.udl
bindings/kotlin/: .editorconfig
bindings/kotlin/ldk-node-android/: README.md  build.gradle.kts  gradle.properties
bindings/python/: pyproject.toml
crates/scorer-inspect/: Cargo.toml  README.md
crates/scorer-inspect/src/: main.rs
scripts/: android_native_validation.sh  normalize_generated_whitespace.sh  test_android_native_validation.sh  uniffi_bindgen_generate.sh  uniffi_bindgen_generate_kotlin.sh  uniffi_bindgen_generate_kotlin_android.sh  uniffi_bindgen_generate_python.sh  uniffi_bindgen_generate_swift.sh
src/: balance.rs  builder.rs  config.rs  data_store.rs  error.rs  event.rs  lib.rs  peer_store.rs  probe_handle.rs  runtime.rs  scoring.rs  types.rs  uniffi_types.rs
src/chain/: bitcoind.rs  bitcoind_rpc.rs  electrum.rs  esplora.rs  mod.rs
src/ffi/: types.rs
src/io/: utils.rs
src/payment/: bolt11.rs  mod.rs  onchain.rs  spontaneous.rs  store.rs  unified_qr.rs
src/wallet/: mod.rs  persist.rs
tests/: integration_tests_rust.rs  multi_address_types_tests.rs  multi_wallet_tests.rs  reorg_test.rs
tests/common/: mod.rs
(+16 files in other folders)
