[package]
name = "scorer-inspect"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Offline diagnostics CLI for LDK ProbabilisticScorer / ChannelLiquidities files."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
humansize = "2"
lightning = { version = "0.2.0", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
